# wistiapy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_media.json  test_media.py  wistia.py
.github/workflows/: python-publish.yml  python-test.yml  pythonpackage.yml
tests/: test_client.py  test_media.json  test_media.py  test_webhooks.py
wistia/: __init__.py  __version__.py  api.py  asset.py  cli.py  client.py  dummy.py  factories.py  helpers.py  media.py  project.py  schema.py  webhooks.py
